--- a/StorageCloudHandler/pom.xml
+++ b/StorageCloudHandler/pom.xml
@@ -7,14 +7,18 @@
   <dependency>
     <groupId>com.dropbox.core</groupId>
     <artifactId>dropbox-core-sdk</artifactId>
-    <version>2.0-beta-1</version>
+    <version>2.0.1</version>
 	</dependency>
 	<dependency>
 	<groupId>org.json</groupId>
 	<artifactId>json</artifactId>
 	<version>20150729</version>
 </dependency>
-	
+	<dependency>
+  <groupId>joda-time</groupId>
+  <artifactId>joda-time</artifactId>
+  <version>2.9.3</version>
+</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -30,5 +34,3 @@
     </plugins>
   </build>
 </project>
-
-
